After adding into Jcenter

--- a/SampleApp/src/main/res/layout/activity_main.xml
+++ b/SampleApp/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
     tools:context="com.aapbd.appbajarlibsample.MainActivity">
 
     <TextView
+        android:id="@+id/resultview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"/>
